[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydra-mrtrix3"
description = "pydra-mrtrix3 contains Pydra task specifications for MRtrix3 tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydra >=0.22",
    "fileformats-medimage >=0.3.4"]
license = {file = "LICENCE.txt"}
authors = [
    {name = "Thomas G. Close", email = "tom.g.close@gmail.com"},
]
maintainers = [
    {name = "Thomas G. Close", email = "tom.g.close@gmail.com"},
]
keywords = ["pydra"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
]
doc = [
    "packaging",
    "sphinx >=2.1.2",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc ~=0.3.0",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-versioning",
]
test = [
    "pytest >= 4.4.0",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
    "pytest-rerunfailures",
    "codecov",
]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build.hooks.vcs]
version-file = "pydra/tasks/mrtrix3/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pydra"]
include-only = ["pydra/tasks/mrtrix3"]

[tool.black]
line-length = 99
target-version = ["py38"]
exclude = "_version.py"
